# google_sign_in

./: BUILD.gn  FlutterGoogleSignIn.podspec  README.md  pubspec.yaml
example/: README.md  flutter.yaml  pubspec.yaml
example/android/: AndroidManifest.xml
example/ios/: Info.plist  Podfile
example/ios/Runner/: AppDelegate.m  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: _Pods.xcodeproj
ios/FlutterGoogleSignIn/Classes/: FlutterGoogleSignIn.h  FlutterGoogleSignIn.m
lib/: flutter_services.yaml  google_sign_in.dart
mojom/: google_sign_in.mojom
sdk/: BUILD.gn
src/: google_sign_in_impl.h  google_sign_in_impl.mm
