# Copyright 2016 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/rules.gni")

  android_java_prebuilt("google_play_services") {
    jar_path = "google-play-services.jar"
  }
  android_java_prebuilt("android_support_v4") {
    jar_path = "google-play-services.jar"
  }
}
